# OS1

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  NoiseGenerator.h  Oscillator.cpp  Oscillator.h  SubOscillator.h  SynthFilter.cpp  SynthFilter.h  SynthVoice.cpp  SynthVoice.h  VoiceManager.cpp  VoiceManager.h
tests/: TestEnvelope.cpp  TestFilter.cpp  TestMain.cpp  TestOscillator.cpp  TestSynthVoice.cpp  TestVoiceManager.cpp
